# game-of-life

./: .gitignore  CMakeLists.txt  conway.c  conway.h  main.c  terminal.c  terminal.h  timing.c  timing.h
